--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "hardhat": "^2.12.4"
   },
   "dependencies": {
+    "concurrently": "^8.0.1",
     "create-react-app": "^5.0.1",
+    "dotenv": "^16.0.3",
     "react-icons": "^4.8.0"
   }
 }
